--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -91,5 +91,5 @@
     "unusual_invoke_id": "IDM operation from connection {{cid}} from had an unusually large or negative invoke ID.",
     "dup_invoke_id": "Duplicated IDM invokeID {{iid}} from connection {{cid}}.",
     "max_concurrent_op": "Connection {{cid}} maxed out the number of permitted concurrent operations. The operation with invoke ID {{iid}} was rejected.",
-    "address_blocked": "BAN_IP={{host}} # Remote host {{host}} was added to the blocklist."
+    "address_blocked": "COULD_BAN={{host}}; Remote host {{host}} was added to the blocklist."
 }
