Add COULD_BAN to logs

--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -6,13 +6,13 @@
     "loaded_matching_rules": "Loaded matching rules.",
     "loaded_context_types": "Loaded context types.",
     "transport_established": "{{source}}: {{transport}} transport established.",
-    "connection_bound_auth": "{{source}}: {{protocol}} connection bound. Authenticated as {{dn}}.",
+    "connection_bound_auth": "{{source}}: {{protocol}} connection bound.",
+    "connection_bound_auth@with_dn": "{{source}}: {{protocol}} connection bound. Authenticated as {{dn}}.",
     "connection_bound_anon": "{{source}}: {{protocol}} connection bound anonymously.",
-    "bind_error": "{{ctype}} {{cid}}: Error during DAP bind operation from {{source}}: {{e}}",
-    "double_bind_attempted": "{{source}} tried to double bind.",
-    "unsupported_protocol": "Unsupported protocol: {{protocol}}.",
-    "unhandled_exception": "Unhandled exception: {{e}}",
-    "socket_error": "{{source}} socket error: {{e}}",
+    "double_bind_attempted": "COULD_BAN={{host}}; {{source}} tried to double bind.",
+    "unsupported_protocol": "COULD_BAN={{host}}; Unsupported protocol from {{source}}: {{protocol}}.",
+    "unhandled_exception": "COULD_BAN={{host}}; Unhandled exception from {{source}}: {{e}}",
+    "socket_error": "COULD_BAN={{host}}; {{source}} socket error: {{e}}",
     "socket_closed": "{{source}} socked closed.",
     "server_error": "{{protocol}} server error: {{e}}.",
     "listening": "{{protocol}} server listening on port {{port}}.",
@@ -25,12 +25,7 @@
     "minor_update_available": "A minor update ({{version}}) is available for Meerkat DSA.",
     "patch_update_available": "A patch update ({{version}}) is available for Meerkat DSA.",
     "terminating_ob": "Terminating operational binding {{id}} at {{time}}.",
-    "error_closing_connection": "{{ctype}} {{cid}}: Error closing {{transport}} connection: {{e}}.",
     "connection_unbound": "{{ctype}} {{cid}}: {{protocol}} connection unbound.",
-    "auth_failure": "{{ctype}} {{cid}}: Authentication failure from {{source}}.",
-    "disconnected_auth_failure": "{{ctype}} {{cid}}: Disconnected {{source}} due to authentication failure.",
-    "error_unbinding": "{{ctype}} {{cid}}: error unbinding: {{e}}",
-    "error_writing_bind_error": "{{ctype}} {{cid}}: error writing bind error: {{e}}",
     "alias_but_no_aen": "Alias entry {{id}} had no aliasedEntryName attribute.",
     "subr_for_hob_not_found": "Subordinate entry for agreement {{obid}} (version {{version}}) not found.",
     "failed_to_update_hob": "Failed to update HOB for agreement {{obid}} (version {{version}}): {{e}}",
@@ -45,8 +40,8 @@
     "no_root_dse": "No root DSE found. Creating it.",
     "created_root_dse": "Created root DSE {{uuid}}.",
     "dit_loaded": "DIT loaded into memory.",
-    "malformed_ldapmessage": "Malformed LDAPMessage from client {{uuid}}.",
-    "encoding_error": "Invalid encoding from client {{uuid}}.",
+    "malformed_ldapmessage": "COULD_BAN={{host}}; Malformed LDAPMessage from client {{uuid}}.",
+    "encoding_error": "COULD_BAN={{host}}; Invalid encoding from client {{uuid}}.",
     "entry_has_unrecognized_object_class": "Entry has unrecognized object class {{oid}}. It's required and optional attributes cannot be known.",
     "password_changed": "Connection {{cid}} changed the password for entry {{uuid}}.",
     "change_password_incorrect": "Connection {{cid}} supplied an incorrect password to changePassword operation on entry {{uuid}}.",
@@ -79,18 +74,18 @@
     "abandon_ldap_op": "Abandoning LDAP operation from message {{mid}}.",
     "abandoning_invocation_from_ldap": "Abandoning invocation {{iid}}, which corresponds to LDAP message {{mid}}.",
     "tcp_max_conn": "TCP connection from {{source}} turned away because the maximum configured number of connections ({{max}}) has been reached.",
-    "tcp_max_conn_per_addr": "TCP connection from {{source}} turned away because the maximum configured number of connections ({{max}}) per address has been reached.",
-    "buffer_limit": "TCP connection from {{source}} did or would have exceeded the configured {{protocol}} buffer size of {{size}} bytes. The socket will be closed.",
-    "pdu_limit": "TCP connection from {{source}} did or would have exceeded the configured {{protocol}} PDU size of {{size}} bytes. The socket will be closed.",
-    "idm_segment_limit": "TCP connection from {{source}} did or would have exceeded the configured limit of {{limit}} IDM segments. The socket will be closed.",
-    "non_ldap_data": "TCP connection from {{source}} sent data that did not appear to be an LDAP message, judging by the first byte: 0x{{hexbyte}}.",
-    "slow_loris": "TCP connection from {{source}} sent data slower than {{bps}} bytes per second and was disconnected to prevent a Slow Loris attack.",
+    "tcp_max_conn_per_addr": "COULD_BAN={{host}}; TCP connection from {{source}} turned away because the maximum configured number of connections ({{max}}) per address has been reached.",
+    "buffer_limit": "COULD_BAN={{host}}; TCP connection from {{source}} did or would have exceeded the configured {{protocol}} buffer size of {{size}} bytes. The socket will be closed.",
+    "pdu_limit": "COULD_BAN={{host}}; TCP connection from {{source}} did or would have exceeded the configured {{protocol}} PDU size of {{size}} bytes. The socket will be closed.",
+    "idm_segment_limit": "COULD_BAN={{host}}; TCP connection from {{source}} did or would have exceeded the configured limit of {{limit}} IDM segments. The socket will be closed.",
+    "non_ldap_data": "COULD_BAN={{host}}; TCP connection from {{source}} sent data that did not appear to be an LDAP message, judging by the first byte: 0x{{hexbyte}}.",
+    "slow_loris": "COULD_BAN={{host}}; TCP connection from {{source}} sent data slower than {{bps}} bytes per second and was disconnected to prevent a Slow Loris attack.",
     "tcp_timeout": "TCP connection from {{source}} timed out after {{seconds}} of inactivity and was disconnected.",
-    "double_starttls": "TCP connection from {{source}} attempted a double-StartTLS. This may have been attempted hacking.",
-    "unusual_message_id": "LDAP message from {{source}} had an unusually large or negative message ID.",
-    "unusual_invoke_id": "IDM operation from connection {{cid}} from had an unusually large or negative invoke ID.",
-    "dup_invoke_id": "Duplicated IDM invokeID {{iid}} from connection {{cid}}.",
-    "max_concurrent_op": "Connection {{cid}} maxed out the number of permitted concurrent operations. The operation with invoke ID {{iid}} was rejected.",
+    "double_starttls": "COULD_BAN={{host}}; TCP connection from {{source}} attempted a double-StartTLS. This may have been attempted hacking.",
+    "unusual_message_id": "COULD_BAN={{host}}; LDAP message from {{source}} had an unusually large or negative message ID.",
+    "unusual_invoke_id": "COULD_BAN={{host}}; IDM operation from connection {{cid}} from had an unusually large or negative invoke ID.",
+    "dup_invoke_id": "COULD_BAN={{host}}; Duplicated IDM invokeID {{iid}} from connection {{cid}}.",
+    "max_concurrent_op": "COULD_BAN={{host}}; Connection {{cid}} maxed out the number of permitted concurrent operations. The operation with invoke ID {{iid}} was rejected.",
     "address_blocked": "COULD_BAN={{host}}; Remote host {{host}} was added to the blocklist.",
-    "idm_bad_sequence": "COULD_BAN={{host}}; Remote host {{host}} submitted IDM packets in an invalid sequence."
+    "idm_bad_sequence": "COULD_BAN={{host}}; Remote host {{source}} submitted IDM packets in an invalid sequence."
 }
