--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -89,5 +89,7 @@
     "address_blocked": "COULD_BAN={{host}}; Remote host {{host}} was added to the blocklist.",
     "cert_chain_no_certificates": "Certificate chain file '{{envvar}}' indicated by environment variable MEERKAT_SIGNING_CERT_CHAIN had no PEM-encoded certificates.",
     "failed_to_decode_subordinates": "Failed to load a subordinate of entry {{uuid}} with this error. No subordinates will be cached for this entry. This was the error: {{e}}",
-    "idm_bad_sequence": "COULD_BAN={{host}}; Remote host {{source}} submitted IDM packets in an invalid sequence."
+    "idm_bad_sequence": "COULD_BAN={{host}}; Remote host {{source}} submitted IDM packets in an invalid sequence.",
+    "too_many_prebind_requests": "COULD_BAN={{host}}; Association {{cid}} submitted too many requests before receiving a bind response.",
+    "bind_error": "COULD_BAN={{host}}; Error encountered during bind from host {{source}}: {{e}}"
 }
