--- a/apps/meerkat/src/assets/locales/en/language/err.json
+++ b/apps/meerkat/src/assets/locales/en/language/err.json
@@ -134,7 +134,8 @@
     "invalid_type_for_alter_values": "Attribute type {{oid}} is not permitted in alterValues modification.",
     "could_not_connect": "Remote DSA is currently unavailable. Could not connect.",
     "could_not_match_exactly": "Could not match exactly.",
-    "single_valued": "User supplied multiple values for single-valued attribute type {{oid}}.",
+    "single_valued": "Cannot supply multiple values for single-valued attribute type {{oid}}.",
+    "single_valued@added": "Cannot add values to single-valued attribute type {{oid}}.",
     "attribute_error_types": "Attribute error involving these attribute types: {{oids}}.",
     "cannot_use_pagination_and_signing": "Pagination cannot be used if signed results are requested unless the chainingProhibited option is set and the preferChaining option is unset.",
     "not_authz_read_selection": "Not authorized to read some of the selected attributes.",
