Require governing structure rules to add subordinates
Signed-off-by: Jonathan M. Wilbur <jonathan@wilbur.space>

--- a/apps/meerkat/src/assets/locales/en/language/err.json
+++ b/apps/meerkat/src/assets/locales/en/language/err.json
@@ -145,5 +145,7 @@
     "anon_bind_disabled": "COULD_BAN={{host}}; Client {{host}} attempted to bind anonymously, but anonymous binds are disabled.",
     "invalid_credentials": "COULD_BAN={{host}}; Client {{host}} attempted to bind with invalid credentials.",
     "one_subschema": "There may only be one subschema subentry in a subschema administrative area. One already exists with the DSE UUID {{uuid}}.",
-    "subschema_whole_area": "A subschema subentry's subtree specification must cover the entire subschema administrative area (e.g. an empty sequence)."
+    "subschema_whole_area": "A subschema subentry's subtree specification must cover the entire subschema administrative area (e.g. an empty sequence).",
+    "no_gsr": "Cannot insert beneath DSE {{uuid}}, which has no governing structure rule. Configure a subschema administrative area first.",
+    "no_gsr@hint": "To create a subschema administrative area, you must make the superior under which you wanted to insert an entry an administrative point, having the administrative role id-ar-subschemaAdminSpecificArea (2.5.23.4), then create a subschema subentry underneath it that has a dITStructureRules attribute with a value whose superiorStructureRules is omitted (and therefore applies to the administrative point)."
 }
