--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -106,5 +106,9 @@
     "removing_a_context_prefix": "Removing context prefix {{uuid}}.",
     "updating_superior_dsa@subentry": "Updating superior DSA because one of the context prefix's subentries were deleted.",
     "failed_to_update_superior_dsa": "Failed to update superior DSA with error {{e}}.",
-    "updated_superior_dsa": "Successfully updated superior DSA."
+    "updated_superior_dsa": "Successfully updated superior DSA.",
+    "establishing_hob_via_add_entry": "AddEntry.targetSystem instigated an attempt to create a HOB beneath DSE {{uuid}}.",
+    "ob_requesting": "Operational binding of type {{type}} and ID {{bid}} establishment requested from connection {{aid}}.",
+    "ob_modifying": "Operational binding of type {{type}} and ID {{bid}} modification requested from connection {{aid}}.",
+    "ob_terminating": "Operational binding of type {{type}} and ID {{bid}} termination requested from connection {{aid}}."
 }
