--- a/apps/meerkat/src/assets/locales/en/language/err.json
+++ b/apps/meerkat/src/assets/locales/en/language/err.json
@@ -129,8 +129,9 @@
     "invalid_reference_no_reason_to_search_here": "Invalid reference: there is no context prefix under the target object, and therefore no reason to continue the search or list in this DSA; alternatively, you may have set the manageDSAIT flag and the object simply does not exist in this DSA.",
     "cannot_reverse_roles_in_hob": "Cannot reverse roles in a hierarchical operational binding.",
     "ob_duplicate_identifier": "Proposed operational binding ID {{id}} is already taken.",
-    "ob_invalid_version": "Proposed operational binding ID version is less than or equal to the most current version.",
-    "failed_to_update_superior_dsa": "Failed to notify superior DSA of changes to the context prefix or one of its subentries.",
+    "ob_invalid_version": "Proposed operational binding ID version ({{proposed}}) is less than or equal to the most current version ({{current}}).",
+    "failed_to_update_superior_dsa@no_hob": "There were no HOBs associated with the context prefix or one of its subentries.",
+    "failed_to_update_superior_dsa@failed": "Attempts to update the superior DSA failed.",
     "unrecognized_ldap_op": "Unrecognized LDAP operation.",
     "invalid_type_for_alter_values": "Attribute type {{oid}} is not permitted in alterValues modification.",
     "could_not_connect": "Remote DSA is currently unavailable. Could not connect.",
