--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -108,7 +108,14 @@
     "failed_to_update_superior_dsa": "Failed to update superior DSA with error {{e}}.",
     "updated_superior_dsa": "Successfully updated superior DSA.",
     "establishing_hob_via_add_entry": "AddEntry.targetSystem instigated an attempt to create a HOB beneath DSE {{uuid}}.",
-    "ob_requesting": "Operational binding of type {{type}} and ID {{bid}} establishment requested from connection {{aid}}.",
-    "ob_modifying": "Operational binding of type {{type}} and ID {{bid}} modification requested from connection {{aid}}.",
-    "ob_terminating": "Operational binding of type {{type}} and ID {{bid}} termination requested from connection {{aid}}."
+    "invalid_new_id": "The superior DSA indicated that the operational binding ID was already in use. This DSA will increment it and attempt it again.",
+    "update_superior_dsa@oberror": "The superior DSA responded to an update with an operationalBindingError with problem {{problem}}.",
+    "update_superior_dsa@errcode": "The superior DSA responded to an update with an error having error code {{code}}.",
+    "update_superior_dsa@nocode": "The superior DSA responded to an update with an error without a code.",
+    "establishOperationalBinding@started": "Operational binding of type {{type}} and ID {{bid}} establishment requested from association {{aid}}.",
+    "modifyOperationalBinding@started": "Operational binding of type {{type}} and ID {{bid}} modification requested from association {{aid}}.",
+    "terminateOperationalBinding@started": "Operational binding of type {{type}} and ID {{bid}} termination requested from association {{aid}}.",
+    "establishOperationalBinding@succeeded": "Operational binding of type {{type}} and ID {{bid}} was established by association {{aid}}.",
+    "modifyOperationalBinding@succeeded": "Operational binding of type {{type}} and ID {{bid}} was modified by association {{aid}}.",
+    "terminateOperationalBinding@succeeded": "Operational binding of type {{type}} and ID {{bid}} was terminated by association {{aid}}."
 }
