Various logging fixes

--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -7,9 +7,9 @@
     "loaded_context_types": "Loaded context types.",
     "loaded_name_forms": "Loaded name forms.",
     "transport_established": "{{source}}: {{transport}} transport established.",
-    "connection_bound_auth": "{{source}}: {{protocol}} connection bound.",
-    "connection_bound_auth@with_dn": "{{source}}: {{protocol}} connection bound. Authenticated as {{dn}}.",
-    "connection_bound_anon": "{{source}}: {{protocol}} connection bound anonymously.",
+    "connection_bound_auth": "{{source}}: {{protocol}} association {{aid}} bound.",
+    "connection_bound_auth@with_dn": "{{source}}: {{protocol}} association {{aid}} bound. Authenticated as {{dn}}.",
+    "connection_bound_anon": "{{source}}: {{protocol}} association {{aid}} bound anonymously.",
     "double_bind_attempted": "COULD_BAN={{host}}; {{source}} tried to double bind.",
     "unsupported_protocol": "COULD_BAN={{host}}; Unsupported protocol from {{source}}: {{protocol}}.",
     "unhandled_exception": "COULD_BAN={{host}}; Unhandled exception from {{source}}: {{e}}",
@@ -26,7 +26,7 @@
     "minor_update_available": "A minor update ({{version}}) is available for Meerkat DSA.",
     "patch_update_available": "A patch update ({{version}}) is available for Meerkat DSA.",
     "terminating_ob": "Terminating operational binding {{id}} at {{time}}.",
-    "connection_unbound": "{{ctype}} {{cid}}: {{protocol}} connection unbound.",
+    "connection_unbound": "{{ctype}} {{cid}}: {{protocol}} association unbound.",
     "alias_but_no_aen": "Alias entry {{id}} had no aliasedEntryName attribute.",
     "subr_for_hob_not_found": "Subordinate entry for agreement {{obid}} (version {{version}}) not found.",
     "failed_to_update_hob": "Failed to update HOB for agreement {{obid}} (version {{version}}): {{e}}",
@@ -58,9 +58,9 @@
     "duplicate_name": "Duplicate name '{{name}}'. The object represented by this OID will still be usable, but not its name when using LDAP.",
     "checking_if_name_taken_in_nssr": "Checking if name is taken in NSSR via DSP operation {{opid}}.",
     "continuing_name_resolution": "Continuing name resolution via DSP operation {{opid}}.",
-    "received_chained_operation": "Received chained operation with identifier {{opid}} from connection {{cid}}.",
+    "received_chained_operation": "Received chained operation with identifier {{opid}} from association {{cid}}.",
     "not_authz_to_add_top_level@hint": "To be able to add an entry to the top level in Meerkat DSA, the environment variable MEERKAT_OPEN_TOP_LEVEL must be set to '1', or there must be entries in this DSA with passwords, or you must be authenticated non-anonymously as an entry that has the boolean may_add_top_level_dse set. The first entry created in this DSA with a password will have this flag set automatically.",
-    "operation_progress_not_understood": "OperationProgress value {{value}} not understood from connection {{cid}}.",
+    "operation_progress_not_understood": "OperationProgress value {{value}} not understood from association {{cid}}.",
     "timed_out_connecting_to_naddr": "Timed out binding to network address {{uri}}.",
     "trying_naddr": "Trying to bind to network address {{uri}}.",
     "bound_to_naddr": "Successfully bound to network address {{uri}}.",
@@ -87,7 +87,7 @@
     "double_starttls": "COULD_BAN={{host}}; TCP connection from {{source}} attempted a double-StartTLS. This may have been attempted hacking.",
     "unusual_message_id": "COULD_BAN={{host}}; LDAP message from {{source}} had an unusually large or negative message ID.",
     "unusual_invoke_id": "COULD_BAN={{host}}; IDM operation from connection {{cid}} from had an unusually large or negative invoke ID.",
-    "dup_invoke_id": "COULD_BAN={{host}}; Duplicated IDM invokeID {{iid}} from connection {{cid}}.",
+    "dup_invoke_id": "COULD_BAN={{host}}; Duplicated IDM invokeID {{iid}} from association {{cid}}.",
     "max_concurrent_op": "COULD_BAN={{host}}; Connection {{cid}} maxed out the number of permitted concurrent operations. The operation with invoke ID {{iid}} was rejected.",
     "address_blocked": "COULD_BAN={{host}}; Remote host {{host}} was added to the blocklist.",
     "cert_chain_no_certificates": "Certificate chain file '{{envvar}}' indicated by environment variable MEERKAT_SIGNING_CERT_CHAIN had no PEM-encoded certificates.",
