Auto-accept some OB modifications

--- a/apps/meerkat/src/assets/locales/en/language/err.json
+++ b/apps/meerkat/src/assets/locales/en/language/err.json
@@ -88,7 +88,8 @@
     "unrecognized_ob_start_time_syntax": "Unrecognized operational binding start time syntax.",
     "unrecognized_ob_end_time_syntax": "Unrecognized operational binding end time syntax.",
     "hob_contextprefixinfo_did_not_match": "Operational binding contextPrefixInfo did not match immediateSuperior.",
-    "ob_rejected": "Operational binding rejected.",
+    "ob_rejected": "Operational binding {{uuid}} rejected.",
+    "ob_rejected@timeout": "Operational binding {{uuid}} was automatically rejected by.",
     "unrecognized_ob_initiator_syntax": "Operational binding initiator syntax unrecognized.",
     "no_ob_with_id": "No operational binding with identifier {{id}}.",
     "can_only_list_or_search_root": "Only a list or search operation may target the root DSE.",
