--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -117,5 +117,6 @@
     "terminateOperationalBinding@started": "Operational binding of type {{type}} and ID {{bid}} termination requested from association {{aid}}.",
     "establishOperationalBinding@succeeded": "Operational binding of type {{type}} and ID {{bid}} was established by association {{aid}}.",
     "modifyOperationalBinding@succeeded": "Operational binding of type {{type}} and ID {{bid}} was modified by association {{aid}}.",
-    "terminateOperationalBinding@succeeded": "Operational binding of type {{type}} and ID {{bid}} was terminated by association {{aid}}."
+    "terminateOperationalBinding@succeeded": "Operational binding of type {{type}} and ID {{bid}} was terminated by association {{aid}}.",
+    "could_not_establish_connection": "Could not establish connection with DSA '{{ae}}' to chain operation {{iid}}."
 }
